force-app/main/default/objects/E2CP__Widespread_Issue_Solution_Vote__c/fields/E2CP__User__c.field-meta.xml
<CustomField>
    <fullName>E2CP__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who voted on the Solution</description>
    <inlineHelpText>User who voted on the Solution</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Votes</relationshipName>
    <type>Lookup</type>
</CustomField>