force-app/main/default/objects/E2CP__Widespread_Issue_Solution_Vote__c/fields/E2CP__Vote__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Vote__c</fullName>
    <description>Indicates whether a vote was an Upvote or Downvote</description>
    <inlineHelpText>Indicates whether a vote was an Upvote or Downvote</inlineHelpText>
    <label>Vote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Up</fullName>
            </value>
            <value>
                <fullName>Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>