force-app/main/default/objects/E2CP__Widespread_Issue_Solution_Vote__c/fields/E2CP__Widespread_Issue_Solution__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Widespread_Issue_Solution__c</fullName>
    <description>Solution related to the Vote</description>
    <inlineHelpText>Solution related to the Vote</inlineHelpText>
    <label>Widespread Issue Solution</label>
    <referenceTo>E2CP__Widespread_Issue_Solution__c</referenceTo>
    <relationshipLabel>Widespread Issue Solution Votes</relationshipLabel>
    <relationshipName>Widespread_Issue_Solution_Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>